# necta

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/tests/: conftest.py  test_main.py
examples/: README.md
examples/api/: openapi.json
examples/components/: chat_interface.tsx
examples/patterns/: webhook_communication.py
examples/ui-ux/: design-system.json
examples/workflows/: ai-agent-example.json  ai-agent.json
frontend/: .eslintrc.json  Dockerfile  jest.config.js  jest.setup.js  next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/__tests__/: page.test.tsx
frontend/components/ui/: .gitkeep
shared/schemas/: auth.ts  index.ts  message.ts  profile.ts
